--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "backend": "node backend/app.js",
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "vite"
   },
   "dependencies": {
     "react": "^18.0.0",
